fix:modal z-index problem

--- a/src/pages/OtherProfilePage/OtherProfilePage.module.scss
+++ b/src/pages/OtherProfilePage/OtherProfilePage.module.scss
@@ -1,12 +1,12 @@
 @import '../../style/base.scss';
 
 .profielContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    min-height: 100vh;
-    padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
 
 }
 
@@ -20,19 +20,23 @@
 .leftColumn,
 .rightColumn {
   background-color: #fff;
-  position: sticky; /* 改為 sticky */
-  top: 0; /* 固定在頂部 */
-  height: 100vh; /* 使用 viewport 高度 */
+  position: sticky;
+  /* 改為 sticky */
+  top: 0;
+  /* 固定在頂部 */
+  height: 100vh;
+  /* 使用 viewport 高度 */
 }
 
 .leftColumn {
   margin-right: 24px;
-  flex:0 0 200px;
+  flex: 0 0 200px;
+  z-index: 1;
 }
 
 .rightColumn {
   margin-right: 24px;
-  flex:0 0 200px;
+  flex: 0 0 200px;
 }
 
 .middleColumn {
